<resources>
    <!-- setting -->
    <string name="app_name">GoogleMap-Album</string>
    <string name="action_settings">設定</string>
    <string name="facebook_app_id">1380851498880005</string>
    <string name="login">FB登入</string>
    <string name="action_simple_login">With Simple Login Button</string>
    <string name="action_custom_login">With Custom Login Button</string>

    <!-- google map -->
    <string name="map_search">輸入地名</string>
    <string name="map_search_text">看地圖</string>
    <string name="title_activity_maps">Map</string>

    <string name="album">拍照</string>
    <string name="share">分享</string>
    <string name="title_activity_web_view">Map Album</string>
    <string name="title_activity_map_view">View Map</string>

    <string name="browse">看相簿</string>
    <string name="choose_image_source">選擇圖片來源</string>

    <!-- mail -->
    <string name="contact_us">聯絡我們</string>
    <string name="email_address">example@gmail.com</string>
    <string name="subject">聯絡GoogleMap Album開發者</string>
    <string name="body">您的建議...</string>
</resources>
