<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.android.nctu.facebook_googlemap_album.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_simple_login"
        android:title="@string/action_simple_login"
        android:orderInCategory="101"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_custom_login"
        android:title="@string/action_custom_login"
        android:orderInCategory="102"
        app:showAsAction="never" />
</menu>