<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:bootstrapthumbnail="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/web_btn"
        android:text="@string/browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="browseWeb"
        bootstrapbutton:bb_icon_right="fa-file-image-o"
        bootstrapbutton:bb_type="success"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:text="@string/map_search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewMap"
        bootstrapbutton:bb_icon_right="fa-map-marker"
        bootstrapbutton:bb_type="default"
        />

    <!-- Square Thumbnail with Image -->
    <com.beardedhen.androidbootstrap.BootstrapThumbnail
        android:id="@+id/thumbnailTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        bootstrapthumbnail:bt_width="350dp"
        bootstrapthumbnail:bt_height="200dp"
        bootstrapthumbnail:bt_image="@drawable/map_picture"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:text="@string/contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="contactUs"
        bootstrapbutton:bb_icon_right="fa-comments"
        bootstrapbutton:bb_type="info"
        />


</LinearLayout>

